--- a/convertir_PDF_PPT_WORD_en_JSON(Python_Java).ipynb
+++ b/convertir_PDF_PPT_WORD_en_JSON(Python_Java).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2260141d-2f25-441e-9a24-a17a7302d3a7",
    "metadata": {},
    "outputs": [
@@ -10,31 +10,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\1- Introduction-2022.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\2-Elements de bases(variables-Opérateurs-Entrée-Sortie 2021.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\3-Structures-Repetitives 2021[Enregistré automatiquement].pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-1.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-2.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-3.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-4.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-5.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-6.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python-7.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\Cours de Python.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\courspython3.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\des-bases-de-donnees-en-python-avec-sqlite3.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\les sous-programmes.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-1.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-1.pptx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-2.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-3.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-4.docx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-4.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-5.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-6.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-7.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-8.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\pooArticle-9.pdf.json\n"
+      "✅ Connexion MongoDB réussie\n",
+      "✅ Fichier trouvé : 0618-javascript-es6-de-a-a-z.pdf\n",
+      "✅ Extraction réussie pour : 0618-javascript-es6-de-a-a-z.pdf\n",
+      "✅ Fichier trouvé : 9782409016219.pdf\n",
+      "✅ Extraction réussie pour : 9782409016219.pdf\n",
+      "✅ Fichier trouvé : AWA_04_IntroVueJS.pdf\n",
+      "✅ Extraction réussie pour : AWA_04_IntroVueJS.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_Chap 1_241105_160541.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_Chap 1_241105_160541.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_Chap 2.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_Chap 2.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_Chap 3-2IAD.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_Chap 3-2IAD.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_Chap 4-2IAD.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_Chap 4-2IAD.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_P2-Chap 1-2IAD.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_P2-Chap 1-2IAD.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_P2-Chap 2-2IAD.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_P2-Chap 2-2IAD.pdf\n",
+      "✅ Fichier trouvé : Dev-Multiplateforme_P2-Chap 3-2IAD.pdf\n",
+      "✅ Extraction réussie pour : Dev-Multiplateforme_P2-Chap 3-2IAD.pdf\n",
+      "✅ Fichier trouvé : JavaScript_L_Essentiel_du_code_et_des_commandes_par_La_grande_bibliotheque_numerique.pdf\n",
+      "✅ Extraction réussie pour : JavaScript_L_Essentiel_du_code_et_des_commandes_par_La_grande_bibliotheque_numerique.pdf\n",
+      "✅ Fichier trouvé : js-1-26.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js-1-26.pdf\n",
+      "✅ Fichier trouvé : js-111-147.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js-111-147.pdf\n",
+      "✅ Fichier trouvé : js-148-458.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js-148-458.pdf\n",
+      "✅ Fichier trouvé : js-26-50.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js-26-50.pdf\n",
+      "✅ Fichier trouvé : js-50-90.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js-50-90.pdf\n",
+      "✅ Fichier trouvé : js-90-111.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js-90-111.pdf\n",
+      "✅ Fichier trouvé : js.pdf\n",
+      "⚠ Fichier vide ou erreur d'extraction : js.pdf\n",
+      "✅ Fichier trouvé : Mon Cours JS (2).pdf\n",
+      "✅ Extraction réussie pour : Mon Cours JS (2).pdf\n",
+      "✅ Fichier trouvé : node-express.pdf\n",
+      "✅ Extraction réussie pour : node-express.pdf\n",
+      "✅ Fichier trouvé : nodeJs (1).pdf\n",
+      "✅ Extraction réussie pour : nodeJs (1).pdf\n",
+      "✅ Fichier trouvé : nodejs.pdf\n",
+      "✅ Extraction réussie pour : nodejs.pdf\n",
+      "✅ Fichier trouvé : react.892.pdf\n",
+      "✅ Extraction réussie pour : react.892.pdf\n",
+      "✅ Fichier trouvé : redecouvrir-javascript-avec-nodejs.pdf\n",
+      "✅ Extraction réussie pour : redecouvrir-javascript-avec-nodejs.pdf\n",
+      "✅ Fichier trouvé : sem1-intro.pdf\n",
+      "✅ Extraction réussie pour : sem1-intro.pdf\n",
+      "✅ Fichier trouvé : slidesJavascriptFr.pdf\n",
+      "✅ Extraction réussie pour : slidesJavascriptFr.pdf\n",
+      "✅ Fichier trouvé : tp3_express.pdf\n",
+      "✅ Extraction réussie pour : tp3_express.pdf\n",
+      "✅ Fichier trouvé : Whitepaper-NodeJS-FR.pdf\n",
+      "✅ Extraction réussie pour : Whitepaper-NodeJS-FR.pdf\n",
+      "📌 21 cours insérés dans MongoDB !\n",
+      "\n",
+      "📌 Affichage de 3 documents insérés :\n",
+      "\n",
+      "--- 0618-javascript-es6-de-a-a-z.pdf ---\n",
+      " 0\n",
+      "1\n",
+      "1.1\n",
+      "1.2\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "4.1\n",
+      "5\n",
+      "5.1\n",
+      "5.2\n",
+      "5.3\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "9.1\n",
+      "9.2\n",
+      "9.3\n",
+      "10\n",
+      "10.1\n",
+      "11\n",
+      "11.1\n",
+      "11.2\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "14.1\n",
+      "14.2\n",
+      "14.3\n",
+      "Table des matières\n",
+      "Introduction\n",
+      "La déclaration de variable\n",
+      "`let`\n",
+      "`const`\n",
+      "Les objets littéraux\n",
+      "`Sym...\n",
+      "\n",
+      "--- 9782409016219.pdf ---\n",
+      "JavaScript\n",
+      "et jQuery \n",
+      "La programmation web\n",
+      "par la pratique\n",
+      "\n",
+      "Frédéric DELOBEL\n",
+      " 1\n",
+      "Table des matières\n",
+      "Avant-propos\n",
+      "Partie 1 : JavaScript\n",
+      "Chapitre 1-1\n",
+      "Présentation de JavaScript\n",
+      "1.\n",
+      "Qu'est-ce que JavaScrip...\n",
+      "\n",
+      "--- AWA_04_IntroVueJS.pdf ---\n",
+      "Introduction à Vue.js (v3)\n",
+      "Philippe Genoud\n",
+      "Philippe.Genoud@univ-grenoble-alpes.fr\n",
+      "Dernière mise à jour : 07/02/2024 12:41\n",
+      " Qu'est-ce que Vue.js ?\n",
+      "• Vue.js : un framework JavaScript open-source et prog...\n"
      ]
     }
    ],
@@ -50,7 +148,7 @@
     "# 1. Configuration initiale\n",
     "# ---------------------------\n",
     "\n",
-    "# Dossier contenant les fichiers (⚠️ À MODIFIER AVEC TON CHEMIN EXACT ⚠️)\n",
+    "# Dossier contenant les fichiers \n",
     "BASE_DIR = r\"C:\\Users\\Romaissae\\OneDrive\\Desktop\\Javascript\"\n",
     "FORMATS = [\"pdf\", \"docx\", \"pptx\"]  # Formats acceptés\n",
     "\n",
@@ -161,41 +259,6 @@
     "else:\n",
     "    print(\"⚠ Aucun document inséré, vérifie les logs ci-dessus.\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4c64ac1d-9109-4ca0-85fc-ad284167badf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_1JAVA.pptx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_2_POO avec Java_partie_1.pptx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_2_POO avec Java_partie_2.pptx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_1.pptx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_21.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_22.docx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_22.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_23.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_3.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_31.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_32.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_3_Paradigmes avancés de la POO en Java_partie_33.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_4_Gestion_Exceptions_Enumérations_Généricité_partie_1.pptx.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CH_4_Gestion_Exceptions_Enumérations_Généricité_partie_2.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\courscomplet_Hugues Fauconnier.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\CoursJavaP1_Université de Paris 13.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\Intro.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\IP1-java-cours-td-1-4.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\livretJava_, INSA Rouen.pdf.json\n",
-      "✅ JSON créé : C:\\Users\\PC\\Desktop\\ProjetSD\\DATA_JAVA_JSON\\Persistence_Données_JDBC.pdf.json\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
