--- a/convertir_PDF_PPT_WORD_en_JSON(Python_Java).ipynb
+++ b/convertir_PDF_PPT_WORD_en_JSON(Python_Java).ipynb
@@ -89,7 +89,7 @@
     "\n",
     "        print(f\"✅ JSON créé : {output_json_path}\")\n",
     "\n",
-    "# Exemple d'utilisation\n",
+    "# PYTHON_DATA \n",
     "convert_folder_to_json(r\"C:\\Users\\PC\\Desktop\\ProjetSD\\PYTHON_DATA\")\n"
    ]
   },
@@ -177,7 +177,7 @@
     "\n",
     "        print(f\"✅ JSON créé : {output_json_path}\")\n",
     "\n",
-    "# Exemple d'utilisation\n",
+    "# JAVA_DATA \n",
     "convert_folder_to_json(r\"C:\\Users\\PC\\Desktop\\ProjetSD\\JAVA_DATA\")\n"
    ]
   },
