--- a/pretraitement.ipynb
+++ b/pretraitement.ipynb
@@ -1,109 +1,102 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4f7a5d0-2dad-4818-bc55-e180cf2fc5bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "from spellchecker import SpellChecker  # pip install pyspellchecker\n",
-    "from pymongo import MongoClient\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 1. Connexion à MongoDB\n",
-    "# ---------------------------\n",
-    "client = MongoClient(\"mongodb://localhost:27017/\")\n",
-    "db = client[\"ProjetSD\"]\n",
-    "collection = db[\"Laravel\"]\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 2. Fonctions de prétraitement\n",
-    "# ---------------------------\n",
-    "def clean_text(text):\n",
-    "    \"\"\"\n",
-    "    Nettoie le texte en éliminant les espaces multiples et les caractères indésirables.\n",
-    "    \"\"\"\n",
-    "    # Supprime les espaces multiples et sauts de ligne\n",
-    "    text = re.sub(r'\\s+', ' ', text)\n",
-    "    # Conserve lettres, chiffres, accents et ponctuation (.,;!?)\n",
-    "    text = re.sub(r'[^a-zA-Z0-9À-ÖØ-öø-ÿ\\s.,;!?]', '', text)\n",
-    "    return text.strip()\n",
-    "\n",
-    "def segment_text(text):\n",
-    "    \"\"\"\n",
-    "    Segmente le texte en chapitres ou sections.\n",
-    "    Ici, on suppose que le mot \"Chapitre\" marque le début d'un nouveau segment.\n",
-    "    \"\"\"\n",
-    "    segments = text.split(\"Chapitre\")\n",
-    "    # Réintroduit \"Chapitre\" au début de chaque segment et élimine les segments vides\n",
-    "    segments = [(\"Chapitre \" + seg).strip() for seg in segments if seg.strip()]\n",
-    "    return segments\n",
-    "\n",
-    "def correct_text(text):\n",
-    "    \"\"\"\n",
-    "    Corrige l'orthographe du texte en utilisant pyspellchecker pour le français.\n",
-    "    Si la correction renvoie None pour un mot, le mot original est conservé.\n",
-    "    \"\"\"\n",
-    "    spell = SpellChecker(language='fr')\n",
-    "    words = text.split()\n",
-    "    corrected_words = []\n",
-    "    for word in words:\n",
-    "        corrected = spell.correction(word)\n",
-    "        # Si aucune correction n'est trouvée, conserver le mot original\n",
-    "        if corrected is None:\n",
-    "            corrected = word\n",
-    "        corrected_words.append(corrected)\n",
-    "    return \" \".join(corrected_words)\n",
-    "\n",
-    "# ---------------------------\n",
-    "# 3. Parcours et mise à jour des documents\n",
-    "# ---------------------------\n",
-    "for doc in collection.find():\n",
-    "    raw_text = doc.get(\"content\", \"\")\n",
-    "    if raw_text:\n",
-    "        # Nettoyage du texte\n",
-    "        cleaned = clean_text(raw_text)\n",
-    "        # Segmentation en chapitres/sections\n",
-    "        segments = segment_text(cleaned)\n",
-    "        # Correction orthographique (appliquée ici sur le texte nettoyé)\n",
-    "        corrected = correct_text(cleaned)\n",
-    "        \n",
-    "        # Mise à jour du document dans MongoDB avec les nouveaux champs\n",
-    "        collection.update_one(\n",
-    "            {\"_id\": doc[\"_id\"]},\n",
-    "            {\"$set\": {\n",
-    "                \"cleaned_text\": cleaned,\n",
-    "                \"segments\": segments,\n",
-    "                \"corrected_text\": corrected\n",
-    "            }}\n",
-    "        )\n",
-    "        print(f\"Document {doc['_id']} mis à jour avec les champs prétraités.\")\n",
-    "    else:\n",
-    "        print(f\"Document {doc['_id']} : aucun contenu à traiter.\")\n"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.4"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+import pymongo
+import spacy
+import nltk
+import string
+import networkx as nx
+from sklearn.feature_extraction.text import TfidfVectorizer
+from nltk.corpus import stopwords
+from nltk.tokenize import word_tokenize
+
+# Télécharger les stopwords français
+nltk.download("punkt")
+nltk.download("stopwords")
+stop_words = set(stopwords.words("french"))
+# Charger le modèle SpaCy pour le français
+nlp = spacy.load("fr_core_news_sm")
+# Connexion à MongoDB
+client = pymongo.MongoClient("mongodb://localhost:27017/")
+db = client["Coursdb"]  # Nom de ta base de données
+
+# Liste des collections à traiter (ex: modules de cours)
+modules = db.list_collection_names()
+modules
+def nettoyer_texte(texte):
+    """ Nettoie le texte : suppression de la ponctuation, mise en minuscules et suppression des stopwords. """
+    texte = texte.lower().translate(str.maketrans("", "", string.punctuation))
+    tokens = word_tokenize(texte, language="french")
+    tokens = [mot for mot in tokens if mot not in stop_words and len(mot) > 2]  # Suppression des mots vides et courts
+    return " ".join(tokens)
+
+
+def extraire_mots_cles_tfidf(documents):
+    """ Applique TF-IDF pour extraire les mots-clés les plus pertinents dans un corpus de documents. """
+    corpus = [doc["content"] for doc in documents]
+    
+    # Vérification des documents non vides
+    corpus_non_vide = [texte for texte in corpus if len(texte.strip()) > 0]  # Filtrer les documents vides
+
+    if not corpus_non_vide:
+        return []  # Retourner une liste vide si tous les documents sont vides
+    
+    vectorizer = TfidfVectorizer(max_features=10)  # Extraire les 10 mots les plus importants
+    tfidf_matrix = vectorizer.fit_transform(corpus_non_vide)
+    mots_cles = vectorizer.get_feature_names_out()
+    return mots_cles
+
+
+def extraire_concepts(texte, taille_max=1_000_000):
+    """ Divise un texte en morceaux et applique SpaCy sur chaque partie. """
+    nlp.max_length = 10_000_000  # Augmente la limite si nécessaire
+    concepts = set()
+    
+    # Découper le texte en morceaux
+    for i in range(0, len(texte), taille_max):
+        morceau = texte[i:i + taille_max]
+        doc = nlp(morceau)
+        for ent in doc.ents:
+            concepts.add(ent.text)
+
+    return list(concepts)
+
+
+def creer_graphe_connaissance(concepts):
+    """ Crée un graphe reliant les concepts extraits. """
+    graphe = nx.Graph()
+    for i, concept1 in enumerate(concepts):
+        for j, concept2 in enumerate(concepts):
+            if i != j:  # On évite de relier un concept à lui-même
+                graphe.add_edge(concept1, concept2)
+    return graphe
+
+
+# Traitement des documents dans chaque module
+for module in modules:
+    collection = db[module]  # Accéder à la collection du module
+    documents = list(collection.find({}))  # Récupérer tous les documents
+
+    for doc in documents:
+        texte = nettoyer_texte(doc["content"])
+
+        # Extraction des concepts
+        mots_cles_tfidf = extraire_mots_cles_tfidf([doc])
+        entites_spacy = extraire_concepts(texte)
+
+        # Fusion des mots-clés et entités pour obtenir une meilleure liste de concepts
+        concepts_extraits = list(set(mots_cles_tfidf).union(set(entites_spacy)))
+
+        # Limiter la taille des concepts et relations pour éviter le dépassement de taille
+        concepts_extraits = concepts_extraits[:100]  # Limiter à 100 concepts maximum
+        graphe = creer_graphe_connaissance(concepts_extraits)
+
+        # Limiter les relations à 100
+        relations = [{"concept1": edge[0], "relation": "lié à", "concept2": edge[1]} for edge in graphe.edges][:100]
+
+        # Mise à jour du document dans MongoDB
+        collection.update_one(
+            {"_id": doc["_id"]},
+            {"$set": {"concepts": concepts_extraits, "relations": relations}}
+        )
+
+    print(f"Traitement terminé pour le module : {module}")
+
+print("Analyse terminée, données mises à jour dans MongoDB.")
